# chip8-c

./: CMakeLists.txt  emu.c  emulator.c  emulator.h  internals.c  mem.c  opcodes.h  peripheral.c  proc.c
ref/: emu.h  internals.h  mem.h  op.h  peripheral.h  proc.h  shared.h
